--- a/bankApp/templates/index.html
+++ b/bankApp/templates/index.html
@@ -7,7 +7,7 @@
         <link rel="shortcut icon" href="#" />
     </head>
     <body>
-        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js" type="text/javascript"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js" type="text/javascript"></script>
         <div class="container-fluid">
             {% include "navbar.html" %}
             {% if request.get_full_path == '/' or show_search %}
